--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- navbar section-->
-    <div class="navbar bg-base-100 shadow-sm">
+    <div class="navbar bg-base-100 shadow-sm bg-[#e0e7ff]">
         <div class="navbar-start">
             <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -41,18 +41,18 @@
                     </svg>
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                     <li>
-                    <a href="" class="">
-                        <i class="fa-solid fa-circle-question"></i> FAQ</a>
-                </li>
-                <li>
-                    <a href="" class="">
-                        <i class="fa-solid fa-book-open"></i> Learn</a>
-                </li>
-                <li>
-                    <a href="" class="">
-                        <i class="fa-solid fa-right-from-bracket"></i>Logout</a>
-                </li>
+                    <li>
+                        <a href="" class="">
+                            <i class="fa-solid fa-circle-question"></i> FAQ</a>
+                    </li>
+                    <li>
+                        <a href="" class="">
+                            <i class="fa-solid fa-book-open"></i> Learn</a>
+                    </li>
+                    <li>
+                        <a href="" class="">
+                            <i class="fa-solid fa-right-from-bracket"></i>Logout</a>
+                    </li>
                 </ul>
             </div>
             <a href="" class="flex items-center gap-1">
@@ -81,7 +81,28 @@
         </div>
     </div>
 
-    
+    <section class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
+        <div class="content flex-1 text-center md:text-left">
+            <h2 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy!!</h2>
+            <p class="font-bangla mb-7">
+                আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের
+                Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ
+            </p>
+
+            <div class="flex-col">
+                <div class="flex flex-col items-center md:items-start">
+                    <input type="text" placeholder="Enter Your Name" class="input" />
+                    <input type="password" placeholder="Enter Your Password" class="input mt-5" />
+                </div>
+
+                <button class="btn btn-primary mt-5">Get Started</button>
+            </div>
+
+        </div>
+        <div class="image flex-1">
+            <img src="./assets/hero-student.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
