--- a/index.html
+++ b/index.html
@@ -108,12 +108,18 @@
         </div>
     </section>
 
+    <!-- Let's Learn Vocabularies section-->
     <section>
         <h2 class="text-4xl font-bold mb-8 text-center">
             <span class="text-sky-400">Let's</span> Learn Vocabularies
         </h2>
 
         <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
+    </section>
+
+    <!-- display cards -->
+    <section id="word-container" class="grid grid-cols-3 gap-5 bg-gray-100 p-10 w-11/12 mx-auto my-10">
+
     </section>
 
     <script src="./script/index.js"></script>
