--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </section>
 
     <!-- display cards -->
-    <section id="word-container" class="grid grid-cols-3 gap-5 bg-gray-100 p-10 w-11/12 mx-auto my-10">
+    <section id="word-container" class="grid grid-cols-1 md:grid-cols-3 gap-5 bg-gray-100 p-10 w-11/12 mx-auto my-10">
 
     </section>
 
