--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@
         <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
     </section>
 
+    <!-- search -->
+    <section>
+        <div class="joinf flex justify-center my-10">
+            <div>
+                <label class="input validator join-item">
+                    <input id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+                </label>
+
+            </div>
+            <button id="btn-search" class="btn btn-primary join-item">Search</button>
+        </div>
+    </section>
+
+    <!-- spinner -->
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+        <span class="loading loading-bars loading-xl"></span>
+    </section>
+
     <!-- display cards -->
     <section id="word-container" class="grid grid-cols-1 md:grid-cols-3 gap-5 bg-gray-100 p-10 w-11/12 mx-auto my-10">
 
@@ -132,8 +150,6 @@
     <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
             <div id="details-container" class="space-y-5">
-                
-                
 
             </div>
             <div class="modal-action">
